[gd_scene load_steps=51 format=3 uid="uid://d0jou4iuydvkg"]

[ext_resource type="Script" uid="uid://cxkd8yvl5fi5l" path="res://character/player.gd" id="1_wodsf"]
[ext_resource type="Texture2D" uid="uid://m4di78taixns" path="res://assets/foxy/fox_hat/fox_defeat_1.png" id="4_c35mf"]
[ext_resource type="Texture2D" uid="uid://b6jgthsrynctr" path="res://assets/foxy/fox_hat/fox_defeat_2.png" id="5_65viv"]
[ext_resource type="Texture2D" uid="uid://fii540ugfj5n" path="res://assets/foxy/fox_hat/fox_defeat_3.png" id="6_x7c3f"]
[ext_resource type="Texture2D" uid="uid://6gko14qsmmw4" path="res://assets/foxy/fox_hat/fox_fall_1.png" id="7_bjvpn"]
[ext_resource type="Texture2D" uid="uid://yom7r0j05to2" path="res://assets/foxy/fox_hat/fox_hurt_1.png" id="8_s7qer"]
[ext_resource type="Texture2D" uid="uid://ck8edmupc3gra" path="res://assets/foxy/fox_hat/fox_hurt_2.png" id="9_g4c7l"]
[ext_resource type="Texture2D" uid="uid://bqh3qhrimo17x" path="res://assets/foxy/fox_hat/fox_hurt_3.png" id="10_knn7v"]
[ext_resource type="Texture2D" uid="uid://b2iyrbygs0b7c" path="res://assets/foxy/fox_hat/fox_idle_1.png" id="11_7pqkx"]
[ext_resource type="Texture2D" uid="uid://c8uke6n7xj17g" path="res://assets/foxy/fox_hat/fox_idle_2.png" id="12_uw77l"]
[ext_resource type="Texture2D" uid="uid://b7ko4rnci3koo" path="res://assets/foxy/fox_hat/fox_jump_1.png" id="13_rptt4"]
[ext_resource type="Texture2D" uid="uid://cseha0dkj5lfj" path="res://assets/foxy/fox_hat/fox_run_1.png" id="14_r7pn3"]
[ext_resource type="Texture2D" uid="uid://3g5hdrfwcd2c" path="res://assets/foxy/fox_hat/fox_run_2.png" id="15_b8hi5"]
[ext_resource type="Texture2D" uid="uid://cg0s41812vukj" path="res://assets/foxy/fox_hat/fox_run_3.png" id="16_2uvqg"]
[ext_resource type="Texture2D" uid="uid://dnt7n2db610ps" path="res://assets/foxy/fox_hat_blade/fox_atk_1.png" id="16_7obkq"]
[ext_resource type="Texture2D" uid="uid://cp2ag6s67gj73" path="res://assets/foxy/fox_hat_blade/fox_defeat_1.png" id="16_kxw46"]
[ext_resource type="Texture2D" uid="uid://8u26ji11yaua" path="res://assets/foxy/fox_hat/fox_run_4.png" id="17_1s1yo"]
[ext_resource type="Texture2D" uid="uid://cx3p62gjf57ep" path="res://assets/foxy/fox_hat_blade/fox_defeat_2.png" id="17_8qxvo"]
[ext_resource type="Texture2D" uid="uid://bkabwrpxdc7cc" path="res://assets/foxy/fox_hat_blade/fox_atk_2.png" id="17_vo27k"]
[ext_resource type="Texture2D" uid="uid://blvo22k8hckk0" path="res://assets/foxy/fox_hat_blade/fox_defeat_3.png" id="18_5q8fn"]
[ext_resource type="Texture2D" uid="uid://byd3g4nnxwfcq" path="res://assets/foxy/fox_hat_blade/fox_atk_3.png" id="18_genst"]
[ext_resource type="Texture2D" uid="uid://bv5er34emc8g1" path="res://assets/foxy/fox_hat_blade/fox_fall_1.png" id="19_wva7c"]
[ext_resource type="Script" uid="uid://tctyttx7vdum" path="res://character/states/hurt.gd" id="20_3j4b4"]
[ext_resource type="Texture2D" uid="uid://bh18dgm068hhf" path="res://assets/foxy/fox_hat_blade/fox_hurt_1.png" id="20_7obkq"]
[ext_resource type="Script" uid="uid://cpysaqpowajgo" path="res://character/states/dead.gd" id="21_ioxgp"]
[ext_resource type="Texture2D" uid="uid://gg8v11cck4hu" path="res://assets/foxy/fox_hat_blade/fox_hurt_2.png" id="21_vo27k"]
[ext_resource type="Script" uid="uid://bftgdjf3at7uk" path="res://scripts/character/hurt_area_2d.gd" id="21_yj68g"]
[ext_resource type="Texture2D" uid="uid://cbfcke2rlqmtw" path="res://assets/foxy/fox_hat_blade/fox_hurt_3.png" id="22_genst"]
[ext_resource type="Texture2D" uid="uid://cv1omqfyyi3aj" path="res://assets/foxy/fox_hat_blade/fox_idle_1.png" id="23_niom3"]
[ext_resource type="Texture2D" uid="uid://d1wqqv8lwu0w0" path="res://assets/foxy/fox_hat_blade/fox_idle_2.png" id="24_ttakn"]
[ext_resource type="Texture2D" uid="uid://cjob2r8khe2fs" path="res://assets/foxy/fox_hat_blade/fox_jump_1.png" id="25_rw8a5"]
[ext_resource type="Texture2D" uid="uid://dgis3lall2gw3" path="res://assets/foxy/fox_hat_blade/fox_run_1.png" id="26_iwuka"]
[ext_resource type="Texture2D" uid="uid://cr8a68nw3dww1" path="res://assets/foxy/fox_hat_blade/fox_run_2.png" id="27_hyqqp"]
[ext_resource type="Texture2D" uid="uid://d0jfmp24jrfcy" path="res://assets/foxy/fox_hat_blade/fox_run_3.png" id="28_ds1xl"]
[ext_resource type="Texture2D" uid="uid://ce35c6mn7dcok" path="res://assets/foxy/fox_hat_blade/fox_run_4.png" id="29_1u1sw"]
[ext_resource type="Texture2D" uid="uid://f0k2ocqkmcc2" path="res://assets/foxy/fox_hat_blade/fox_jump_atk_1.png" id="29_niom3"]
[ext_resource type="Texture2D" uid="uid://c8k8kn11ppnjp" path="res://assets/foxy/fox_hat_blade/fox_jump_atk_2.png" id="30_ttakn"]
[ext_resource type="Script" uid="uid://dpmgq467205al" path="res://scripts/character/hit_area_2d.gd" id="33_niom3"]
[ext_resource type="Script" uid="uid://dp3lba7mnpcyn" path="res://character/states/idle.gd" id="39_art4l"]
[ext_resource type="Script" uid="uid://bn74l4ngryo6x" path="res://character/states/run.gd" id="40_fjxoa"]
[ext_resource type="Script" uid="uid://gfx18su7m3de" path="res://character/states/attack.gd" id="40_vo27k"]
[ext_resource type="Script" uid="uid://di3w8xw7t025o" path="res://character/states/jump.gd" id="41_gswnw"]
[ext_resource type="Script" uid="uid://caxtbpdyga1ay" path="res://character/states/fall.gd" id="42_xcnuv"]
[ext_resource type="Script" uid="uid://78lgi0avpi8a" path="res://character/states/throw.gd" id="44_2qmbm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oul6g"]
radius = 9.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ge24q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c35mf")
}, {
"duration": 1.0,
"texture": ExtResource("5_65viv")
}, {
"duration": 1.0,
"texture": ExtResource("6_x7c3f")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_bjvpn")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_s7qer")
}, {
"duration": 1.0,
"texture": ExtResource("9_g4c7l")
}, {
"duration": 1.0,
"texture": ExtResource("10_knn7v")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_7pqkx")
}, {
"duration": 1.0,
"texture": ExtResource("12_uw77l")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_rptt4")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_niom3")
}, {
"duration": 1.0,
"texture": ExtResource("18_genst")
}],
"loop": true,
"name": &"jump_throw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_r7pn3")
}, {
"duration": 1.0,
"texture": ExtResource("15_b8hi5")
}, {
"duration": 1.0,
"texture": ExtResource("16_2uvqg")
}, {
"duration": 1.0,
"texture": ExtResource("17_1s1yo")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_7obkq")
}, {
"duration": 1.0,
"texture": ExtResource("18_genst")
}],
"loop": true,
"name": &"throw",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2t3bg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_7obkq")
}, {
"duration": 1.0,
"texture": ExtResource("17_vo27k")
}, {
"duration": 1.0,
"texture": ExtResource("18_genst")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_kxw46")
}, {
"duration": 1.0,
"texture": ExtResource("17_8qxvo")
}, {
"duration": 1.0,
"texture": ExtResource("18_5q8fn")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_wva7c")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_7obkq")
}, {
"duration": 1.0,
"texture": ExtResource("21_vo27k")
}, {
"duration": 1.0,
"texture": ExtResource("22_genst")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_niom3")
}, {
"duration": 1.0,
"texture": ExtResource("24_ttakn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_rw8a5")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_niom3")
}, {
"duration": 1.0,
"texture": ExtResource("30_ttakn")
}],
"loop": false,
"name": &"jump_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_niom3")
}, {
"duration": 1.0,
"texture": ExtResource("18_genst")
}],
"loop": false,
"name": &"jump_throw",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_iwuka")
}, {
"duration": 1.0,
"texture": ExtResource("27_hyqqp")
}, {
"duration": 1.0,
"texture": ExtResource("28_ds1xl")
}, {
"duration": 1.0,
"texture": ExtResource("29_1u1sw")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_7obkq")
}, {
"duration": 1.0,
"texture": ExtResource("18_genst")
}],
"loop": false,
"name": &"throw",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ttakn"]
size = Vector2(12, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ioxgp"]
size = Vector2(20, 31)

[sub_resource type="LabelSettings" id="LabelSettings_2qmbm"]
font_size = 8

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 257
script = ExtResource("1_wodsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -14)
shape = SubResource("CapsuleShape2D_oul6g")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2(1, -61)
enabled = false

[node name="Direction" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_ge24q")
animation = &"idle"

[node name="BladeAnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_2t3bg")
animation = &"idle"

[node name="HitArea2D" type="Area2D" parent="Direction"]
collision_layer = 32
collision_mask = 16
script = ExtResource("33_niom3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitArea2D"]
position = Vector2(18, -11)
shape = SubResource("RectangleShape2D_ttakn")
disabled = true

[node name="HurtArea2D" type="Area2D" parent="Direction"]
collision_layer = 4
collision_mask = 8
script = ExtResource("21_yj68g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HurtArea2D"]
position = Vector2(-1, -14.5)
shape = SubResource("RectangleShape2D_ioxgp")

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource("39_art4l")

[node name="Run" type="Node" parent="States"]
script = ExtResource("40_fjxoa")

[node name="Jump" type="Node" parent="States"]
script = ExtResource("41_gswnw")

[node name="Fall" type="Node" parent="States"]
script = ExtResource("42_xcnuv")

[node name="Hurt" type="Node" parent="States"]
script = ExtResource("20_3j4b4")

[node name="Dead" type="Node" parent="States"]
script = ExtResource("21_ioxgp")

[node name="Attack" type="Node" parent="States"]
script = ExtResource("40_vo27k")

[node name="Throw" type="Node" parent="States"]
script = ExtResource("44_2qmbm")

[node name="Name" type="Label" parent="."]
offset_left = -29.0
offset_top = -50.0
offset_right = 33.0
offset_bottom = -33.0
text = "Player 1"
label_settings = SubResource("LabelSettings_2qmbm")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[connection signal="hurt" from="Direction/HurtArea2D" to="." method="_on_hurt_area_2d_hurt"]
